# tweaktune

./: .gitignore  CLA.md  Cargo.toml  Makefile  README.md  clippy.toml  pyproject.toml  rustfmt.toml
.github/workflows/: build.yml  release.yml
crates/tweaktune/: Cargo.toml
crates/tweaktune-abstractions/: Cargo.toml
crates/tweaktune-abstractions/src/: lib.rs
crates/tweaktune-core/: Cargo.toml
crates/tweaktune-core/db/migrations/: 0001_init.sql
crates/tweaktune-core/src/: common.rs  config.rs  lib.rs
crates/tweaktune-core/src/common/: dedup.rs  internal.rs  mod.rs  validators.rs
crates/tweaktune-core/src/datasets/: mod.rs
crates/tweaktune-core/src/dictionaries/: mod.rs  openings.rs
crates/tweaktune-core/src/embeddings/: e5.rs  mod.rs
crates/tweaktune-core/src/llms/: mod.rs
crates/tweaktune-core/src/readers/: mod.rs
crates/tweaktune-core/src/seq2seq/: mod.rs
crates/tweaktune-core/src/state/: mod.rs
crates/tweaktune-core/src/steps/: conversations.rs  embeddings.rs  generators.rs  logic.rs  mod.rs  py.rs  quality.rs  validators.rs  writers.rs
crates/tweaktune-core/src/templates/: embed.rs  mod.rs
crates/tweaktune-core/src/tokenizers/: mod.rs
crates/tweaktune-core/templates/chat_templates/: bielik.j2
crates/tweaktune-core/templates/conversations/: output.j2  output_legacy.j2  output_raw.j2
crates/tweaktune-core/templates/judges/: conversation_en.j2  conversation_pl.j2  judge.j2  judge_pl.j2  tools_calling_en.j2  tools_calling_lite_en.j2  tools_calling_lite_pl.j2  tools_calling_pl.j2
crates/tweaktune-core/tests/: e5_integration.rs  seq2seq_integration.rs
crates/tweaktune-py/: Cargo.toml
crates/tweaktune-py/src/: lib.rs
crates/tweaktune-py/src/steps/: mod.rs
crates/tweaktune-pyo3/: Cargo.toml
crates/tweaktune-pyo3/src/: chat_template.rs  common.rs  datasets.rs  lib.rs  logging.rs  pipeline.rs
crates/tweaktune-pyo3/src/pipeline/: mod.rs
crates/tweaktune-pyo3/src/steps/: mod.rs
crates/tweaktune/src/: main.rs
crates/tweaktune/src/actors/: mod.rs
crates/tweaktune/src/pipeline/: mod.rs
docs/: 01-getting-started.md  02-pipeline-basics.md  03-data-sources.md  04-templates.md  05-llm-integration.md  06-pipeline-steps.md  07-custom-steps.md  08-validation-quality.md  09-conversation-tools.md  10-chat-templates.md  11-metadata-tracking.md  12-advanced-features.md  README.md
examples/: 01_simple_pipeline.py  02_data_sources.py  03_templates.py  04_transformations.py  05_text_generation.py  06_json_generation.py  07_qa_dataset.py  08_function_calling.py  09_conversations.py  10_deduplication.py  11_validation.py  12_custom_steps.py  13_conditional_logic.py  14_chat_templates.py  15_rl_formats.py  README.md
tests/: steps_tests.rs
tweaktune-python/: Cargo.toml  pyproject.toml
tweaktune-python/src/: lib.rs
tweaktune-python/tests/: conftest.py  example.parquet  openapi.json  test.db  test_basic.py  test_chat_template_builder.py  test_function_response_schema.py  test_judge.py  test_metadata.py  test_read.py  test_steps.py  test_template_filters.py  test_tools.py  test_write.py
tweaktune-python/tweaktune/: __init__.py  chain.py  common.py  structured.py  tools.py  tune.py  wrappers.py
tweaktune-python/tweaktune/chat_templates/: __init__.py
tweaktune-python/tweaktune/templates/function_calling/: output_template.j2
tweaktune-python/tweaktune/templates/tools/: __init__.py  output.j2  tool_call.j2
tweaktune-python/tweaktune/templates/tools_calling/: __init__.py
tweaktune-python/tweaktune/ui/: __init__.py
