[workspace]
members = [
    #"crates/onceuponai-server",
    "crates/tweaktune-abstractions",
    #"crates/onceuponai-actors",
    #"crates/onceuponai-actors-candle",
    #"crates/onceuponai-actors-mistralrs",
    #"crates/onceuponai-candle",
    "crates/tweaktune-core",
    #"crates/tweaktune", 
    "crates/tweaktune-pyo3",
    "tweaktune-python",
    #"crates/onceuponai/src-tauri"
    ]

[workspace.package]
version = "0.0.1"
edition = "2021"
description = "TweakTune"
repository = "https://github.com/qooba/tweaktune"
keywords = ["llm", "ai", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
actix = "0.13.5"
actix-broker = "0.4.3"
actix-files = "0.6.2"
actix-rt = "2.9"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-telepathy = "0.6.1"
actix-web = { version = "4", features = ["rustls"]  }
anyhow = { version = "1.0.89", features = ["backtrace"] }
arrow = { version = "54.1.0" , features=["json", "pyarrow", "csv"]}
arrow-array = "51.0"
async-stream = "0.3.3"
async-trait = "0.1.83"
base64 = "0.22.1"
byteorder = "1.4.3"
bytes = "1.7.2"
candle-core = "0.7.0"
candle-nn = "0.7.0"
candle-transformers = "0.7.0"
#candle-core = { git = "https://github.com/qooba/candle.git", rev="9a9bc6d" }
#candle-nn = { git = "https://github.com/qooba/candle.git", rev="9a9bc6d"  }
#candle-transformers = { git = "https://github.com/qooba/candle.git", rev="9a9bc6d" }
clap = { version = "4.5.18", features = ["derive"]}
chrono = {version="0.4.22", features=["serde"]}
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
cookie = "0.18"
csv = { version = "1.3.0" }
ctrlc = {version ="3.1.0"}
data-url = "0.3.1"
derive_more = {version="1.0.0", features=["full"]}
dirs = "4.0"
dotenv = "0.15.0"
either = { version = "1.13.0", features = ["serde"] }
envy = "0.4"
env_logger = { version = "0.11.2" }
futures = "0.3.25"
futures-util = "0.3.30"
hf-hub = "0.3.2"
#hf-hub = { git = "https://github.com/qooba/hf-hub.git", branch = "remove-native-tls-ok", version = "0.3.2", features = ["tokio"] }
indexmap = "2.6.0"
indicatif = "0.17"
image = "0.25.2"
jsonwebtoken = "9.3.0"
kube = { version = "0.92.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
#lancedb = { version = "0.5.2", default-features = false, features=["polars"] }
lancedb = { version = "0.5.2", default-features = false }
log = "0.4.14"
minijinja = {version="2.7.0", features=["loader"]}
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", rev="ddc63f1e0433356789cd875c3e39df16df0d0a43" }
#mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", rev="09d2e2596d9b0aa728749cf5614e40dd1a112b3b" }
#mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", rev="32e894510696e9aa3c11db79268ee031a3ecefa6" }
#mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", rev="9dfbab1a1f3f260f130680f6c4f02f8656ea28ed" }
num-traits = "0.2.15"
once_cell = "1.17.1"
opendal = { version="0.51", features=["services-fs"] }
openidconnect = { version="3.5", features=["reqwest"] }
parquet = { version = "54.1.0", features = ["arrow"] }
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3", "abi3-py38", "anyhow", "auto-initialize"] }
polars = { version ="0.46.0", features = ["lazy", "sql", "csv", "json", "parquet", "serde"] }
#polars-arrow = "0.39.2"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false}
rustls = { version = "0.23.13" }
safetensors = "0.4.5"
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9"
serde_arrow = { version="0.12.3" }
tar = "0.4"
toml = "0.8.19"
# tauri = { version = "1", features = ["shell-open", "http-all"] }
tauri = { version = "2.0.0-beta", features = [] }
tauri-build = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
text-splitter = "0.25.1"
thiserror = "1.0.64"
tokenizers = { version = "0.20.0", features = [
    "unstable_wasm",
], default-features = false }
tokio = { version = "1.44.2", features = ["full"]}
tokio-util = "0.7.13"
tweaktune-abstractions = { path = "crates/tweaktune-abstractions" }
tweaktune-core = { path = "crates/tweaktune-core" }
tweaktune-pyo3 = { path = "crates/tweaktune-pyo3" }
url = "2.3"
uuid = "1.6.1"
xz2 = "0.1"
#accelerate-src = { version = "0.3.2", optional = true }
#intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
#metal = { version = "0.27.0", features = ["mps"], optional = true }


[profile.release-with-debug]
inherits = "release"
debug = true
