[package]
name = "tweaktune-python"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
name = "tweaktune"
crate-type = ["cdylib"]

#[build]
#rustflags = ["-C", "target-cpu=native"]

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
env_logger = { workspace = true }
minijinja = { workspace = true}
pyo3 = { workspace = true }
tokio = { workspace = true }
tweaktune-abstractions = { workspace = true }
tweaktune-core = { workspace = true}
tweaktune-pyo3 = { workspace = true}
# pyo3-async = { version = "0.3.2" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[features]
default = []
polars=["tweaktune-core/polars"]