[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[project]
name = "tweaktune"
version = "0.0.1-alpha.3"
requires-python = ">=3.8"
description = "A Python package for syntesize datasets for training and fine-tuning AI models."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
	"pydantic ~=2.10.6",
]

[project.urls]
repository = "https://github.com/qooba/tweaktune"

[project.optional-dependencies]
arrow = [
    "datasets ~=3.2.0", 
    "pyarrow ~=19.0.0"
]