[package]
name = "tweaktune-abstractions"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }