[package]
name = "tweaktune-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
csv = { workspace = true }
hf-hub = { workspace = true }
log = { workspace = true}
minijinja = { workspace = true}
once_cell = { workspace = true }
opendal = { workspace = true }
pyo3 = { workspace = true}
polars = { workspace = true }
polars-arrow = { workspace = true }
polars-plan = { workspace = true }
polars-utils = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_arrow = { workspace = true, features = ["arrow-54"]}
serde_json = { workspace = true }
serde_yaml = { workspace = true }
murmur3 = { workspace = true }
text-splitter = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tweaktune-abstractions= { workspace = true }
url = { workspace = true }


[dev-dependencies]
tempfile = "3"
