[package]
name = "tweaktune-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
csv = { workspace = true }
half = { workspace = true }
hf-hub = { workspace = true }
jsonschema = { workspace = true}
lingua = { workspace = true}
log = { workspace = true}
minijinja = { workspace = true}
once_cell = { workspace = true }
opendal = { workspace = true }
pyo3 = { workspace = true}
polars = { workspace = true }
polars-arrow = { workspace = true }
polars-utils = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
# rusqlite = { workspace = true }
serde = { workspace = true }
serde_arrow = { workspace = true, features = ["arrow-54"]}
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
serde_yaml = { workspace = true }
simhash = { workspace = true }
sqlx = { workspace = true }
sqlite-vec = { workspace = true }
murmur3 = { workspace = true }
probminhash = { workspace = true }
text-splitter = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tweaktune-abstractions= { workspace = true }
unicode-normalization = { workspace = true}
url = { workspace = true }
uuid = { workspace = true }


[dev-dependencies]
tempfile = "3"

[features]
integration-tests = []
