[package]
name = "tweaktune-py"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
name = "tweaktune"
crate-type = ["cdylib"]

#[build]
#rustflags = ["-C", "target-cpu=native"]

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
minijinja = { workspace = true}
tweaktune-abstractions= { path = "../tweaktune-abstractions" }
tweaktune-core= { path = "../tweaktune-core" }
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3", "abi3-py38", "anyhow"] }
# pyo3-async = { version = "0.3.2" }
tokio = { workspace = true }
